# MarketMind

./: .gitignore  PROJECT_OVERVIEW.md  README.md  environment.yaml  pyproject.toml
notebooks/: 01_data_engineering.ipynb  02_mathematical_foundations.ipynb  03_econometrics_alpha.ipynb  04_graph_neural_networks.ipynb  05_modern_portfolio_theory.ipynb  06_alpha_beta_sigma.ipynb  07_efficient_frontier.ipynb  08_portfolio_construction.ipynb  09_hierarchical_risk_parity.ipynb  10_black_litterman.ipynb  11_cvar_optimization.ipynb  12_portfolio_comparison.ipynb
src/: config.py  hello_world.py
src/analytics/: advanced_optimizer.py  backtester.py  benchmark.py  econometrics.py  math_core.py  plot_individual_strategies.py  plot_simple_individual.py  portfolio_optimizer.py  run_benchmark.py  stats.py  volatility.py
src/graph/: builder.py  dynamic_relations.py  semantic.py
src/ingestion/: market_data.py  news_scraper.py
src/models/: gnn.py  temporal_gnn.py
src/presentation/: alpha_beta_sigma.py
src/processing/: analyst_agent.py  cleaning.py  features.py  nlp.py  sentiment.py
src/visualization/: analyst_flow_viz.py  gnn_structure_viz.py  interactive_graph.py
tests/: conftest.py  test_config.py  test_ingestion.py  test_optimization.py
tools/: library_cli.py
visuals/: analyst_report.md
